Bug 561117 - "hang-pair: hang|mozilla::plugins::PPluginInstanceParent::CallNPP_SetWindow(mozilla::plugins::NPRemoteWindow const &) against hang|NtUserMessageCall | SendMessageWorker" [r=benjamin]